# aihelm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: bdd-writer.md  domain-implementer.md  flet-ui-designer.md  infra-implementer.md  services-implementer.md  spec-writer.md  unit-test-writer.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml
specs/: README.md
specs/contracts/: task_repository.md
specs/rules/: task_queue_rules.md
specs/schemas/: task.json
src/aihelm/: __main__.py
src/aihelm/domain/: README.md
src/aihelm/domain/models/: __init__.py  status.py  task.py
src/aihelm/domain/ports/: __init__.py  task_repository.py
src/aihelm/infra/: README.md
src/aihelm/infra/persistence/: __init__.py  json_task_repository.py
src/aihelm/services/: README.md  __init__.py  task_queue_service.py
src/aihelm/ui/: README.md
src/aihelm/ui/components/: __init__.py  status_badge.py  task_card.py
src/aihelm/ui/views/: __init__.py  queue_view.py  task_detail_view.py
tests/: README.md  conftest.py
tests/bdd/: conftest.py
tests/bdd/features/: task_delete.feature  task_edit.feature  task_queue.feature
tests/bdd/steps/: test_task_delete.py  test_task_edit.py  test_task_queue.py
tests/unit/domain/: test_smoke.py  test_status.py  test_task.py
tests/unit/infra/: test_json_task_repository.py
tests/unit/services/: test_task_queue_service.py
