[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aihelm"
version = "0.1.0"
description = "Local desktop orchestrator for AI code assistants"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "bandit>=1.7",
    "pre-commit>=3.7",
]

[project.scripts]
aihelm = "aihelm.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aihelm"]

# --- Formatting & Linting ---

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S603",  # subprocess call - we need this for git/cli execution
    "S607",  # partial executable path - we invoke git/claude by name
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["aihelm"]

# --- Type Checking ---

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "flet.*"
ignore_missing_imports = true

# --- Testing ---

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring real git/filesystem",
]

[tool.coverage.run]
source = ["src/aihelm"]
branch = true
omit = [
    "src/aihelm/__main__.py",
    "src/aihelm/ui/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]

# --- Bandit (Security) ---

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B603", "B607"]  # subprocess calls are intentional in this project
